# OOP

./: .gitignore  CMakeLists.txt  dot.cpp  dot.h  dots.cpp  dots.h  error_handling.cpp  error_handling.h  file_input.cpp  file_input.h  input.cpp  input.h  line.cpp  line.h  lines.cpp  lines.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  request.cpp  request.h
3_lab/: 3_lab_ru_RU.ts  CMakeLists.txt  mainwindow.cpp  mainwindow.h
3_lab/Edge/: Edge.cpp  Edge.h
3_lab/Entity/: Entity.cpp  Entity.h
3_lab/Figure/: Figure.cpp  Figure.h
3_lab/Matrix/: Matrix.cpp  Matrix.h
3_lab/Model/: BaseModel.cpp  BaseModel.h  Model.cpp  Model.h
3_lab/Objects/: VisiableObject.cpp  VisiableObject.h
3_lab/Point/: Point.cpp  Point.h
3d_objects/: dot.cpp  dot.h  dots.cpp  dots.h  line.cpp  line.h  lines.cpp  lines.h
dot_math_operations/: center.cpp  center.h  center_movement.cpp  center_movement.h  rotator.cpp  rotator.h  scaler.cpp  scaler.h
drawing/: draw_lines.cpp  draw_lines.h
iterator/: Iterator.hpp
lab_3/: CMakeLists.txt
lab_3/build_cmake/: CMakeLists.txt
lab_3/inc/: mainwindow.h
lab_3/inc/camera/: camera.h
lab_3/inc/commands/: base_command.h  camera_command.h  compound_command.h  model_command.h  scene_command.h
lab_3/inc/configuration/: configuration.h
lab_3/inc/facade/: facade.h
lab_3/inc/loader/: abstract_load_controller.h  base_loader.h
lab_3/inc/loader/camera/: base_camera_director.h  camera_director.h  camera_load_controller.h  camera_load_controller_creator.h
lab_3/inc/loader/model/: base_model_director.h  model_director.h  model_load_controller.h  model_load_controller_creator.h
lab_3/inc/managers/draw/: draw_manager.h
lab_3/inc/managers/load/: load_model_controller_creator.h
lab_3/inc/managers/transform/: transform_manager.h
lab_3/inc/math/: glm_wrapper.h
lab_3/inc/model/: model.h  model_struct.h  transform.h
lab_3/inc/object/: composite.h  object.h
lab_3/inc/scene/: scene.h
lab_3/inc/utils/: BaseTransformer.h  Mover.h  Rotator.h  Scaler.h
lab_3/inc/visitor/: TransformVisitor.h  visitor.h
lab_3/src/: mainwindow.cpp
lab_3/src/camera/: camera.cpp
lab_3/src/commands/: camera_command.cpp  compound_command.cpp  model_command.cpp  scene_command.cpp
lab_3/src/configuration/: configuration.cpp
lab_3/src/facade/: facade.cpp
lab_3/src/loader/: loader_camera_file.cpp
lab_3/src/loader/camera/: camera_director.cpp  camera_load_controller.cpp  camera_load_controller_creator.cpp
lab_3/src/loader/model/: model_director.cpp  model_load_controller.cpp  model_load_controller_creator.cpp
lab_3/src/managers/draw/: draw_manager.cpp  draw_manager_creator.cpp
lab_3/src/managers/load/: load_manager.cpp  load_model_controller.cpp  load_model_controller_creator.cpp  load_scene_controller.cpp
lab_3/src/managers/transform/: transform_manager.cpp
lab_3/src/math/: glm_wrapper.cpp
lab_3/src/model/: model.cpp  model_struct.cpp
lab_3/src/object/: composite.cpp
lab_3/src/utils/: BaseTransformer.cpp
lab_3/src/visitor/: TransformVisitor.cpp
model_operations/: rotator.cpp  rotator.h  scaler.cpp  scaler.h
setTree/: Iset.h  RBtree.hpp  setRBTree.hpp  tree.h  treeNode.h
tests/: dots_data.txt  finished_cat.txt  new_dots.txt  pyramid.txt  pyramid_scaled_turned.txt  smth_scaled_rotated.txt  test.txt  turned_cube.txt  z_scaled_cube.txt
tree/: Iset.h  tree.h  tree.hpp  treeNode.h
utils/: base_exception.h  concepts.h  exceptions.h
